--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
   },
   "devDependencies": {
     "array-shuffle": "^1.0.1",
-    "eslint": "^5.1.0",
-    "eslint-config-pretty-strict": "^1.0.0-rc.9",
-    "eslint-plugin-prettier": "^2.6.2",
-    "esm": "^3.0.66",
+    "eslint": "^5.12.0",
+    "eslint-config-pretty-strict": "^1.0.0-rc.16",
+    "eslint-plugin-prettier": "^3.0.1",
+    "esm": "^3.0.84",
     "faucet": "0.0.1",
-    "husky": "^1.0.0-rc.13",
-    "nyc": "^12.0.2",
-    "prettier": "1.13.7",
-    "tape": "^4.9.1"
+    "husky": "^1.3.1",
+    "nyc": "^13.1.0",
+    "prettier": "1.15.3",
+    "tape": "^4.9.2"
   },
   "eslintConfig": {
     "extends": [
