--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   },
   "scripts": {
     "lint": "eslint *.js",
-    "test": "nyc --silent tape -r esm index.test.js | faucet && nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "posttest": "npm run lint"
+    "test": "nyc --silent tape -r esm index.test.js | faucet && nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100"
   },
   "devDependencies": {
     "array-shuffle": "^1.0.1",
@@ -59,7 +58,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test"
+      "pre-commit": "npm test && npm run lint"
     }
   }
 }
