--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "averaged-perceptron",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0-rc.0",
   "description": "A linear classifier with the averaged perceptron algorithm",
   "keywords": [
     "artificial intelligence",
