--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
   "license": "MIT",
   "author": "Artem Rudenko <rtomrud@gmail.com>",
   "files": [
+    "dist",
     "index.js"
   ],
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/rtomrud/averaged-perceptron.git"
   },
   "scripts": {
+    "build": "rollup -i index.js -o dist/index.js -f cjs",
     "lint": "eslint '*.js'",
+    "prepare": "npm run build",
     "test": "nyc --reporter html tape -r esm index.test.js | faucet && nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100"
   },
   "devDependencies": {
@@ -40,6 +43,7 @@
     "husky": "^1.3.1",
     "nyc": "^13.2.0",
     "prettier": "1.16.4",
+    "rollup": "^1.1.2",
     "tape": "^4.9.2"
   },
   "eslintConfig": {
@@ -52,6 +56,9 @@
     },
     "root": true
   },
+  "eslintIgnore": [
+    "dist"
+  ],
   "esm": {
     "cjs": true,
     "mode": "auto"
