Run lint script after test script

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "build": "rollup -i index.js -o dist/index.js -f cjs",
     "lint": "eslint .",
     "prepare": "npm run build",
-    "test": "nyc --reporter html tape -r esm index.test.js | faucet && nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100"
+    "test": "nyc --reporter html tape -r esm index.test.js | faucet && nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "posttest": "npm run lint"
   },
   "devDependencies": {
     "array-shuffle": "1.0.1",
@@ -65,7 +66,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test && npm run lint"
+      "pre-commit": "npm test"
     }
   }
 }
