Integrate with coveralls

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "scripts": {
     "build": "rollup -i index.js -o dist/index.js -f cjs",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint .",
     "prepare": "npm run build",
     "test": "nyc --reporter html tape -r esm index.test.js | faucet && nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "array-shuffle": "1.0.1",
+    "coveralls": "3.0.3",
     "eslint": "5.16.0",
     "eslint-config-pretty-strict": "2.0.0",
     "eslint-plugin-prettier": "3.0.1",
