--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
       "ecmaVersion": 2018,
       "sourceType": "module"
     },
+    "rules": {
+      "guard-for-in": "off"
+    },
     "root": true
   },
   "eslintIgnore": [
