--- a/package.json
+++ b/package.json
@@ -30,20 +30,20 @@
   "scripts": {
     "build": "rollup -i index.js -o dist/index.js -f cjs",
     "lint": "eslint .",
-    "prepare": "npm run build",
+    "prepare": "husky install && npm run build",
     "test": "nyc --reporter html tape -r esm index.test.js && nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "posttest": "npm run lint"
   },
   "devDependencies": {
-    "eslint": "7.2.0",
-    "eslint-config-pretty-strict": "6.1.1",
-    "eslint-plugin-prettier": "3.1.3",
+    "eslint": "7.32.0",
+    "eslint-config-pretty-strict": "8.0.2",
+    "eslint-plugin-prettier": "3.4.0",
     "esm": "3.2.25",
-    "husky": "4.2.5",
+    "husky": "7.0.1",
     "nyc": "15.1.0",
-    "prettier": "2.0.5",
-    "rollup": "2.16.0",
-    "tape": "5.0.1"
+    "prettier": "2.3.2",
+    "rollup": "2.56.2",
+    "tape": "5.3.1"
   },
   "eslintConfig": {
     "extends": [
@@ -64,10 +64,5 @@
   ],
   "esm": {
     "sourceMap": true
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm test"
-    }
   }
 }
