Add jest dev dependency

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,15 @@
 {
   "extends": ["eslint-config-pretty-strict"],
+  "overrides": [
+    {
+      "extends": ["plugin:jest/recommended"],
+      "files": [
+        "**/__tests__/**/*.[jt]s?(x)",
+        "**/?(*.)+(spec|test).[jt]s?(x)"
+      ],
+      "plugins": ["jest"]
+    }
+  ],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
