--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,10 @@ name: ci
 on:
   push:
     branches:
-      - $default-branch
+      - master
   pull_request:
     branches:
-      - $default-branch
+      - master
 jobs:
   test:
     runs-on: ubuntu-latest
