--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "Artem Rudenko <rtomrud@gmail.com>",
   "files": [
     "dist",
-    "index.js"
+    "types"
   ],
   "main": "dist/index.cjs",
   "repository": {
@@ -28,24 +28,30 @@
     "url": "https://github.com/rtomrud/averaged-perceptron.git"
   },
   "scripts": {
-    "build": "rollup -i index.js -o dist/index.cjs -f cjs --exports auto",
+    "build": "esbuild index.ts --bundle --outfile=dist/index.js --format=esm && esbuild index.ts --bundle --outfile=dist/index.cjs --format=cjs",
     "lint": "eslint .",
     "prepare": "npm run build",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
     "posttest": "npm run lint"
   },
   "devDependencies": {
-    "eslint": "8.20.0",
-    "eslint-config-pretty-strict": "8.1.1",
-    "eslint-plugin-jest": "26.6.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "jest": "28.1.3",
-    "prettier": "2.7.1",
-    "rollup": "2.77.0"
+    "@types/jest": "29.5.11",
+    "@typescript-eslint/eslint-plugin": "6.17.0",
+    "@typescript-eslint/parser": "6.17.0",
+    "esbuild": "0.19.11",
+    "esbuild-jest": "0.5.0",
+    "eslint": "8.56.0",
+    "eslint-config-pretty-strict": "8.1.2",
+    "eslint-plugin-jest": "27.6.1",
+    "eslint-plugin-prettier": "5.1.2",
+    "jest": "29.7.0",
+    "prettier": "3.1.1",
+    "typescript": "5.3.3"
   },
   "type": "module",
   "exports": {
-    "import": "./index.js",
+    "types": "./types/index.d.ts",
+    "import": "./dist/index.js",
     "default": "./dist/index.cjs"
   }
 }
