--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
     "dist",
     "types"
   ],
-  "main": "dist/index.cjs",
   "repository": {
     "type": "git",
     "url": "https://github.com/rtomrud/averaged-perceptron.git"
   },
   "scripts": {
-    "build": "esbuild index.ts --bundle --outfile=dist/index.js --format=esm && esbuild index.ts --bundle --outfile=dist/index.cjs --format=cjs",
+    "build": "esbuild index.ts --bundle --outfile=dist/index.js --format=esm",
     "lint": "eslint .",
     "prepare": "npm run build",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
@@ -51,7 +50,6 @@
   "type": "module",
   "exports": {
     "types": "./types/index.d.ts",
-    "import": "./dist/index.js",
-    "default": "./dist/index.cjs"
+    "default": "./dist/index.js"
   }
 }
