--- a/package.json
+++ b/package.json
@@ -19,37 +19,29 @@
   "license": "MIT",
   "author": "Artem Rudenko <rtomrud@gmail.com>",
   "files": [
-    "dist",
-    "types"
+    "index.js",
+    "index.d.ts"
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/rtomrud/averaged-perceptron.git"
   },
   "scripts": {
-    "build": "esbuild index.ts --bundle --outfile=dist/index.js --format=esm",
     "lint": "eslint .",
-    "prepare": "npm run build",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
     "posttest": "npm run lint"
   },
   "devDependencies": {
-    "@types/jest": "29.5.11",
-    "@typescript-eslint/eslint-plugin": "6.17.0",
-    "@typescript-eslint/parser": "6.17.0",
-    "esbuild": "0.19.11",
-    "esbuild-jest": "0.5.0",
     "eslint": "8.56.0",
     "eslint-config-pretty-strict": "8.1.2",
     "eslint-plugin-jest": "27.6.1",
     "eslint-plugin-prettier": "5.1.2",
     "jest": "29.7.0",
-    "prettier": "3.1.1",
-    "typescript": "5.3.3"
+    "prettier": "3.1.1"
   },
   "type": "module",
   "exports": {
-    "types": "./types/index.d.ts",
-    "default": "./dist/index.js"
+    "types": "./index.d.ts",
+    "default": "./index.js"
   }
 }
