--- a/package.json
+++ b/package.json
@@ -28,15 +28,13 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "test": "node --test --experimental-test-coverage",
     "posttest": "npm run lint"
   },
   "devDependencies": {
     "eslint": "8.56.0",
     "eslint-config-pretty-strict": "8.1.2",
-    "eslint-plugin-jest": "27.6.1",
     "eslint-plugin-prettier": "5.1.2",
-    "jest": "29.7.0",
     "prettier": "3.1.1"
   },
   "type": "module",
