--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "url": "https://github.com/rtomrud/averaged-perceptron.git"
   },
   "scripts": {
+    "format": "prettier --check .",
     "lint": "eslint .",
     "test": "node --test --experimental-test-coverage",
-    "posttest": "npm run lint"
+    "posttest": "npm run lint && npm run format"
   },
   "devDependencies": {
     "@eslint/js": "9.1.1",
     "eslint": "8.57.0",
-    "prettier": "3.1.1"
+    "prettier": "3.2.5"
   },
   "type": "module",
   "exports": {
