--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/rtomrud/averaged-perceptron.git"
+    "url": "git+https://github.com/rtomrud/averaged-perceptron.git"
   },
   "scripts": {
     "format": "prettier --check .",
